overflow-fix-for-safari

--- a/css/style.scss
+++ b/css/style.scss
@@ -41,6 +41,7 @@ $xsmall: 360px;
   scroll-behavior: smooth;
 }
 
+html,
 body {
   overflow-x: hidden;
 }
